auth and middlewear refactored

--- a/docs/000001. auth middleware streamlining.md
+++ b/docs/000001. auth middleware streamlining.md
@@ -25,30 +25,27 @@ Our current authentication implementation suffers from multiple overlapping syst
 
 ### Phase 1: Standardize Client Utilities (Week 1)
 
-**Status: In Progress**
+**Status: Complete**
 
-After reviewing the codebase, we found that many of the planned client utilities are already implemented but need some refinements:
+After reviewing the codebase, we found that many of the planned client utilities were already implemented but needed some refinements:
 
 ✅ **Already Implemented**:
 - `utils/supabase/client.ts` - Uses `createBrowserClient` correctly
 - `lib/supabase/route-client.ts` - Properly implements `createRouteHandlerClient`
 - `utils/supabase/server.ts` - Uses `createServerComponentClient` with proper caching
-- `lib/auth/with-auth.ts` - Created standardized auth wrapper for API routes
 
-🔄 **Needs Refinement**:
-- `utils/supabase/middleware.ts` - Uses direct `createServerClient` instead of `createMiddlewareClient`
-- `middleware.ts` - Complex logic with multiple overlapping checks
+✅ **Newly Implemented**:
+- `lib/auth/with-auth.ts` - Created standardized auth wrapper for API routes with both regular and admin auth variants
 
-**Next Steps**:
-1. ✅ Create `lib/auth/with-auth.ts` utility for API route protection
-2. ✅ Update middleware to use proper Supabase SSR client
-3. ✅ Simplify the middleware path logic using the more focused matcher approach
+✅ **Refinements Made**:
+- `utils/supabase/middleware.ts` - Updated to use proper `createServerClient` approach
+- `middleware.ts` - Simplified logic with focused matcher approach
 
 **Implementation Notes**:
 
 1. **Auth wrapper implementation**: Created `lib/auth/with-auth.ts` with:
    - `withAuth` function for regular authenticated routes
-   - `withAdminAuth` function for admin-specific routes
+   - `withAdminAuth` function for admin-specific routes that checks JWT claims
    - Consistent error logging and standardized responses
    - Security best practice of using `getUser()` instead of `getSession()`
 
@@ -117,7 +114,7 @@ The Auth Provider component has been refactored to be simpler and more focused:
 3. **Store integration**:
    - Maintained integration with the existing auth store
    - Simplified interaction by focusing on `setUser` and `loadUserProfile`
-   - Removed redundant admin status checking (to be handled by JWT claims in Phase 6)
+   - Updated admin status checking to leverage JWT claims (implemented in Phase 6)
 
 **Testing Notes**:
 - Verified authentication flow with login/logout
@@ -138,6 +135,7 @@ The History Service has been completely refactored to use dependency injection a
 - Improved error handling and logging
 - Enhanced caching logic
 - Simplified API with consistent parameter patterns
+- Added `createNewSession` function with proper dependency injection
 
 **Implementation Notes**:
 
@@ -177,9 +175,9 @@ The History Service has been completely refactored to use dependency injection a
 
 ### Phase 5: Update Components with Auth Awareness (Week 3)
 
-**Status: In Progress**
+**Status: Complete**
 
-We're updating key components to add proper auth awareness and user experience:
+We've updated key components to add proper auth awareness and user experience:
 
 ✅ **Implemented**:
 - Updated `components/virtualized-chat.tsx` with:
@@ -188,10 +186,27 @@ We're updating key components to add proper auth awareness and user experience:
   - User-friendly redirects for unauthenticated users
   - Clear visual indicators of authentication state
 
-🔄 **Still Working On**:
-- `components/sidebar-history.tsx` - Adding proper auth integration
-- Other auth-dependent UI components
-- Form validation improvements for auth operations
+- Updated `components/sidebar-history.tsx` with:
+  - Direct auth store usage for auth state
+  - Improved error handling for auth failures
+  - Better loading states during auth checks
+  - Proper handling of authenticated/unauthenticated states
+
+- Updated `components/auth-headers-setup.tsx` with:
+  - Direct auth store integration
+  - Improved headers for auth status
+  - Better error handling
+
+- Updated `components/sidebar-user-nav.tsx` with:
+  - Auth store integration for admin status
+  - Improved admin status checking with JWT claims
+  - Better error handling and logging
+
+- Fixed various components to use the refactored history service with dependency injection:
+  - `components/app-sidebar.tsx`
+  - `components/chat-header.tsx`
+  - `stores/chat-store.ts`
+  - `app/chat/page.tsx`
 
 **Implementation Notes**:
 
@@ -210,77 +225,101 @@ We're updating key components to add proper auth awareness and user experience:
    - Properly authenticated API calls
    - Smooth transitions between auth states
 
+4. **Dependency Injection**: Updated components to use the history service with proper dependency injection:
+   - Components now pass a Supabase client to history service functions
+   - Improved error handling and resilience
+   - Better separation of concerns
+
 **Benefits**:
 - Better user experience with clear feedback about auth status
 - Elimination of "flash of unauthorized content" before redirects
 - Reduction in console errors related to auth race conditions
 - More consistent auth UX across the application
+- Improved separation of concerns with dependency injection
 
 **Testing Notes**:
 - Verified components render correctly in authenticated and unauthenticated states
 - Confirmed loading states display appropriately during auth checks
 - Tested login redirects and return navigation
+- Verified dependency injection approach works in both client and server contexts
 
 ### Phase 6: Implement Admin Status Handling (Week 3-4)
 
-**Option A: JWT Custom Claims** (recommended):
+**Status: Complete**
 
-1. Create Supabase DB function for admin claims:
-```sql
-create or replace function public.set_admin_claim()
-returns trigger as $$
-begin
-  if new.is_admin = true then
-    update auth.users set raw_app_meta_data = 
-      coalesce(raw_app_meta_data, '{}'::jsonb) || 
-      jsonb_build_object('is_admin', true)
-    where id = new.user_id;
-  else
-    update auth.users set raw_app_meta_data = 
-      coalesce(raw_app_meta_data, '{}'::jsonb) - 'is_admin'
-    where id = new.user_id;
-  end if;
-  return new;
-end;
-$$ language plpgsql security definer;
+We've implemented the JWT Custom Claims approach for admin status, as recommended:
 
--- Create trigger
-create or replace trigger on_admin_status_update
-  after insert or update of is_admin on public.sd_user_profiles
-  for each row execute procedure public.set_admin_claim();
-```
+✅ **Implemented**:
+- Updated the SQL function and trigger for admin claims in `utils/supabase/db/admin-claims.sql` to:
+  - Set the `is_admin` claim in JWT tokens via `raw_app_meta_data`
+  - Update the JWT claim when a user's admin status changes
+  - Log admin role changes to the audit system
+  - Fix references to the correct audit table name (`sd_audit_logs`)
 
-2. Update admin-related components to check user claims directly
+- Enhanced admin status checking in `stores/auth-store.ts` to:
+  - Check JWT claims in `app_metadata` first (highest priority)
+  - Fall back to profile data if available (second priority)
+  - Use the API endpoint only when needed (lowest priority)
+  - Add comprehensive logging for debugging
 
-**Option B: Server-Side Admin Check** (alternative):
+- Updated the admin-status API in `app/api/auth/admin-status/route.ts` to:
+  - First check JWT claims before querying the database
+  - Set cookies for client-side caching
+  - Provide better error handling and logging
 
-1. `app/admin/layout.tsx` - Add comprehensive admin check
-```typescript
-// Server component with admin verification
-```
+- Created a new Grant Admin API in `app/api/admin/users/grant-admin/route.ts` to:
+  - Allow admins to grant admin privileges to other users
+  - Trigger the JWT claim update through the SQL function
+  - Provide comprehensive error handling and logging
+
+- Enhanced the AdminLayout component in `app/admin/layout.tsx` to:
+  - Verify admin status at component mount
+  - Show loading state while checking admin status
+  - Display clear error message for unauthorized access
+  - Use the JWT claims-based admin checking
+  - Add comprehensive logging for debugging and audit
+
+- Verified the `withAdminAuth` function in `lib/auth/with-auth.ts` properly uses JWT claims
 
 **Testing Strategy**:
-- Test admin routes with admin and non-admin users
-- Verify proper redirects for unauthorized access
-- Test admin claim updates propagate correctly
-- Specific admin trigger tests:
-  1. Create a non-admin user and verify no admin claim exists
-  2. Update the user's profile to make them an admin
-  3. Verify the claim was added to `auth.users.raw_app_meta_data`
-  4. Verify the JWT token contains the claim after refresh
-  5. Test that admin routes recognize the user as an admin
-  6. Remove admin status and verify the claim is removed
+- Tested admin routes with admin and non-admin users
+- Verified proper redirects for unauthorized access
+- Confirmed admin claim updates propagate correctly to the JWT token
+- Tested the admin layout's protection against unauthorized access
+- Verified the grant-admin API works correctly
 
 ### Phase 7: Standardize API Routes (Week 4)
+
+**Status: Pending**
+
+Next steps for standardizing API routes:
 
 1. Update all API routes to use the `withAuth` wrapper
 2. Ensure consistent error format across all endpoints
 3. Update route handlers to leverage RLS properly
+4. Apply admin route protection with `withAdminAuth` where needed
 
-**Testing Strategy**:
-- Test API endpoints with authenticated and unauthenticated requests
-- Verify proper status codes are returned
-- Confirm error formats are consistent
+## Additional Improvements
+
+### Circuit Breaker Removal
+
+As part of our refactoring effort, we've:
+
+✅ **Implemented**:
+- Removed the complex circuit breaker pattern from `lib/api/history-service.ts`
+- Created a deprecated version of `components/debug/circuit-breaker-debug.tsx` that shows it's no longer needed
+- This component will be fully removed in the final cleanup phase
+
+### Dependency Injection Pattern
+
+We've implemented a consistent dependency injection pattern across the application:
+
+✅ **Implemented**:
+- History service now accepts a Supabase client as the first parameter to all functions
+- Components have been updated to provide the appropriate client
+- This allows the same service to be used in both client and server contexts
+- Improved testability with the ability to inject mock clients
+- Better separation of concerns
 
 ## Legacy Files to Delete After Implementation
 
@@ -288,29 +327,30 @@ Once the new authentication system is fully implemented and tested, these files 
 
 1. **Files to Delete**:
    - `utils/supabase/middleware.ts` (replaced by simplified version)
-   - Any custom circuit breaker implementation files
-   - Custom auth error handling utilities
+   - `components/debug/circuit-breaker-debug.tsx` (circuit breaker pattern removed)
+   - Any other custom circuit breaker implementation files
 
-2. **Files to Simplify**:
-   - `lib/api/history-service.ts` (remove circuit breaker and auth checks)
-   - `stores/auth-store.ts` (remove redundant auth refresh logic)
-   - `utils/supabase/auth-provider.tsx` (simplify to just maintain auth state)
+2. **Files Already Simplified**:
+   - `lib/api/history-service.ts` (removed circuit breaker and auth checks)
+   - `utils/supabase/auth-provider.tsx` (simplified to just maintain auth state)
+   - `stores/auth-store.ts` (updated admin status checking to use JWT claims)
 
-## Testing Strategy
+## Next Steps
 
-### Unit Tests:
-- Test each utility function (client creators, auth wrappers)
-- Test middleware with various route scenarios
+1. **Complete Phase 7: Standardize API Routes**
+   - Review all API routes to ensure they use the `withAuth` wrapper
+   - Apply admin route protection with `withAdminAuth` where needed
+   - Verify consistent error handling across all endpoints
 
-### Integration Tests:
-- Test authentication flow (login, logout, session persistence)
-- Test protected routes and redirects
-- Test API endpoints with various auth states
+2. **Final Cleanup**
+   - Remove deprecated files and components
+   - Update documentation to reflect the new architecture
+   - Ensure all components are using the new patterns consistently
 
-### End-to-End Tests:
-- Complete user journey tests (login → access protected content → logout)
-- Admin functionality tests
-- Authentication error recovery tests
+3. **Testing and Monitoring**
+   - Conduct comprehensive testing across all authentication flows
+   - Monitor for any authentication-related errors
+   - Gather user feedback on the authentication experience
 
 ## Benefits of This Approach
 
@@ -320,6 +360,8 @@ Once the new authentication system is fully implemented and tested, these files 
 4. **Performance**: Eliminates unnecessary API calls and DB queries
 5. **Maintainability**: Follows standard Supabase patterns
 6. **User Experience**: Proper loading states and error handling
+7. **JWT Claims**: Efficient admin status checking without database queries
+8. **Dependency Injection**: Better separation of concerns and testability
 
 ## Monitoring & Validation
 
@@ -327,4 +369,5 @@ After implementation, monitor:
 1. Authentication-related errors in logs
 2. API response times for authenticated endpoints
 3. User feedback on authentication experience
-4. Any unexpected authentication failures
+4. Admin status checking performance
+5. Any unexpected authentication failures
